--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
-  "dependencies": { "parcel-bundler": "^1.6.1" },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.2.0",
     "typescript": "4.4.4"
@@ -15,5 +15,8 @@
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   },
-  "keywords": ["javascript", "starter"]
+  "keywords": [
+    "javascript",
+    "starter"
+  ]
 }
